--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 
-<script>
+<!-- <script>
    var previousAmount = localStorage.getItem("total") ? localStorage.getItem("total") : 0;
    previousAmount = parseInt(previousAmount);
    $(".total").html("$" + previousAmount);
@@ -53,7 +54,7 @@
          location.reload();
       }
    })
-</script>
+</script> -->
 
 <script>
 
