--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script src="main.js"></script>
+<script src="/main.js"></script>
 
 <!-- <script>
    var previousAmount = localStorage.getItem("total") ? localStorage.getItem("total") : 0;
