--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Custom styles for this template -->
     <link href="./style/main.css" rel="stylesheet">
   </head>
-  <body onload="init();">
+  <body onload="init()">
     <header>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
