--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
              <option value="1">Innova</option>
              <option value="2">Kastaplast</option>
              <option value="3">Latitude 64</option>
+             <option value="4">MVP</option>
            </select>
 
            <button type="submit" class="btn btn-primary my-1">Filter</button>
