--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
              <option value="2">Kastaplast</option>
              <option value="3">Latitude 64</option>
              <option value="4">MVP</option>
+             <option value="5">Dynamic Discs</option>
            </select>
 
            <button type="submit" class="btn btn-primary my-1">Filter</button>
