--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
              <option value="3">Latitude 64</option>
              <option value="4">MVP</option>
              <option value="5">Dynamic Discs</option>
+             <option value="6">Discraft</option>
            </select>
 
            <button type="submit" class="btn btn-primary my-1">Filter</button>
