--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
       <div class="navbar-brand d-flex align-items-center">
         <strong>Quinn's Discs</strong>
         <form class="form-inline" style="padding-left: 100px;">
-           <label class="my-1 mr-2" for="inlineFormCustomSelectPref">Brand</label>
            <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-             <option selected>Choose...</option>
+             <option selected>Choose a brand</option>
              <option value="1">Innova</option>
              <option value="2">Kastaplast</option>
              <option value="3">Latitude 64</option>
