--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
       <div class="row">
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Innova DX Destroy 171g</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./images/reko.png">
             <div class="card-body">
-              <p class="card-text"></p>
+              <p class="card-text">Kastaplast Glow Reko 175g</p>
             </div>
           </div>
         </div>
