--- a/index.html
+++ b/index.html
@@ -17,19 +17,6 @@
     <div class="container d-flex justify-content-between">
       <div class="navbar-brand d-flex align-items-center">
         <strong>Quinn's Discs</strong>
-        <form class="form-inline" style="padding-left: 100px;">
-           <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
-             <option selected>Choose a brand</option>
-             <option value="1">Innova</option>
-             <option value="2">Kastaplast</option>
-             <option value="3">Latitude 64</option>
-             <option value="4">MVP</option>
-             <option value="5">Dynamic Discs</option>
-             <option value="6">Discraft</option>
-           </select>
-
-           <button type="submit" class="btn btn-primary my-1">Filter</button>
-      </form>
       </div>
     </div>
   </div>
@@ -39,7 +26,6 @@
 
   <div class="album py-5 bg-light">
     <div class="container">
-
       <div class="row">
         <div class="col-md-4">
           <div class="card" style="width: 18rem;">
@@ -49,10 +35,27 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./images/reko.png">
+            <div class="card-body">
+              <p class="card-text">Kastaplast Glow Reko 175g</p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+
+        <div class="col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="./images/reko.png">
+            <div class="card-body">
+              <p class="card-text">Kastaplast Glow Reko 175g</p>
+            </div>
+          </div>
+        </div>
+     </div>
+   </div>
+ </div>
 
 </main>
 
