--- a/index.html
+++ b/index.html
@@ -27,32 +27,267 @@
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./images/reko.png">
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/aviar_146.jpg">
             <div class="card-body">
-              <p class="card-text">Kastaplast Glow Reko 175g</p>
+              <p class="card-text">Innova DX Aviar 146g</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./images/reko.png">
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/aviar_146_2.jpg">
             <div class="card-body">
-              <p class="card-text">Kastaplast Glow Reko 175g</p>
+              <p class="card-text">Innova DX Aviar 146g</p>
             </div>
           </div>
         </div>
 
-        <div class="col-md-4">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="./images/reko.png">
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/aviar_150.jpg">
             <div class="card-body">
-              <p class="card-text">Kastaplast Glow Reko 175g</p>
+              <p class="card-text">Innova DX Aviar 150g</p>
             </div>
           </div>
         </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/leopard_147.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Leopard 147g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/valkyrie_166.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Valkyrie 166g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shryke_167.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Shryke 167g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shryke_168.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Glow Shryke 168g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shryke_168_2.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Shryke 168g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shryke_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Shryke 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shryke_175_2.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Pro Shryke 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/thunderbird_166.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova GStar Thunderbird 166g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/destroyer_141.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Blizzard Champion Destroyer 141g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/destroyer_167.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Destroyer 167g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/destroyer_166.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Destroyer 166g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/firebird_167.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Glow Firebird 167g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/leopard_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Leopard 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/leopard_175_2.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova GStar Leopard3 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/tern_170.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Tern 170g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/shark_150.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Shark 150g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/dart_167.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Dart 167g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/viper_148.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Viper 148g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/viper_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Viper 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/beast_171.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Beast 171g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/beast_174.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Beast 174g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/boss_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Boss 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/roadrunner_172.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Star Roadrunner 172g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/roadrunner_171.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova GStar Roadrunner 171g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/mako_182.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova Champion Mako 182g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/nova_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova XT Nova 173g</p>
+            </div>
+          </div>
+        </div>
+
      </div>
    </div>
  </div>
