--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
 
         <div class="col-md-4 item">
           <div class="card">
+            <img class="card-img-top" src="./images/dart_167_2.jpg">
+            <div class="card-body">
+              <p class="card-text">Innova DX Dart 167g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
             <img class="card-img-top" src="./images/viper_148.jpg">
             <div class="card-body">
               <p class="card-text">Innova DX Viper 148g</p>
@@ -284,6 +293,249 @@
             <img class="card-img-top" src="./images/nova_173.jpg">
             <div class="card-body">
               <p class="card-text">Innova XT Nova 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/cd_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Discmania S-Line CD Craze 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/flyer_165.jpg">
+            <div class="card-body">
+              <p class="card-text">Lightning Discs #1 Flyer 165g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/diamond_151.jpg">
+            <div class="card-body">
+              <p class="card-text">Latitude 64 Retro Line 151g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/mercy_174.jpg">
+            <div class="card-body">
+              <p class="card-text">Latitude 64 Zero Soft Line Burst Mercy 174g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/pure_174.jpg">
+            <div class="card-body">
+              <p class="card-text">Latitude 64 Zero Megasoft Line Pure 174g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/bolt_174.jpg">
+            <div class="card-body">
+              <p class="card-text">Latitude 64 Gold Line Pure 174g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/getaway_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Getaway Prototype 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/truth_180.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Prime Truth 180g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/warden_176.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Classic Soft Burst Warden 176g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/sheriff_171.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Bio Fuzion 171g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/escape_170.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Lucid Escape 170g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/freedom_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Fuzion Freedom 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/escape_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Dynamic Discs Fuzion Escape 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/ghost_177.jpg">
+            <div class="card-body">
+              <p class="card-text">Legacy Discs Excel Ghost 177g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/ghost_177.jpg">
+            <div class="card-body">
+              <p class="card-text">Legacy Discs Excel Ghost 177g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/reko_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Kastaplast K1 Glow Reko 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/reko_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Kastaplast K1 Glow Reko 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/kaxe_176.jpg">
+            <div class="card-body">
+              <p class="card-text">Kastaplast K1 Glow Kaxe 176g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/magic_174.jpg">
+            <div class="card-body">
+              <p class="card-text">Gateway Eraser Magic 174g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/wizard_175.jpg">
+            <div class="card-body">
+              <p class="card-text">Gateway Wizard 175g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/undertaker_169.jpg">
+            <div class="card-body">
+              <p class="card-text">Discraft Z Undertaker 169g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/buzz_177.jpg">
+            <div class="card-body">
+              <p class="card-text">Discraft Z Buzzz OS 177g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/predator_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Discraft Z Predator 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/virus_166.jpg">
+            <div class="card-body">
+              <p class="card-text">Axiom Neutron Virus 166g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/envy_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Axiom Neutron Envy 173g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/d1_166.jpg">
+            <div class="card-body">
+              <p class="card-text">Prodigy 400G D1 166g</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 item">
+          <div class="card">
+            <img class="card-img-top" src="./images/lace_173.jpg">
+            <div class="card-body">
+              <p class="card-text">Vibram Lace 173g</p>
             </div>
           </div>
         </div>
