--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head> 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinn's Discs</title>
 
     <!-- Bootstrap core CSS -->
@@ -425,15 +425,6 @@
 
         <div class="col-md-4 item">
           <div class="card">
-            <img class="card-img-top" src="./images/ghost_177.jpg">
-            <div class="card-body">
-              <p class="card-text">Legacy Discs Excel Ghost 177g</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 item">
-          <div class="card">
             <img class="card-img-top" src="./images/reko_175.jpg">
             <div class="card-body">
               <p class="card-text">Kastaplast K1 Glow Reko 175g</p>
@@ -545,7 +536,7 @@
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="./main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </body>
 </html>
